--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+    <title>My Landing Page</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <h1>Welcome to My Health Blog</h1>
+        <nav>
+            <a href="#home">Home</a>
+            <a href="#about">About</a>
+            <a href="#contact">Contact</a>
+        </nav>
+    </header>
+    <main>
+        <p>This is a brief introduction to my health blog. I'm excited to share reliable health information, practical tips, and motivational content with you!</p>
+        <img src="path-to-your-image.jpg" alt="Healthy lifestyle image">
+    </main>
+    <footer>
+        <p>Contact me at: myemail@example.com</p>
+    </footer>
+</body>
+</html>
