--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </header>
     <main>
         <p>This is a brief introduction to my health blog. I'm excited to share reliable health information, practical tips, and motivational content with you!</p>
-        <img src="path-to-your-image.jpg" alt="Healthy lifestyle image">
+        <img src="brand-logo.png" alt="Healthy lifestyle image">
     </main>
     <footer>
         <p>Contact me at: myemail@example.com</p>
