--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>My Landing Page</title>
-    <link rel="stylesheet" hrf="styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
