--- a/index.html
+++ b/index.html
@@ -1,24 +1,73 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>My Landing Page</title>
+    <title>My Health Blog</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Welcome to My Health Blog</h1>
+        <div class="logo">
+            <img src="path-to-your-logo.png" alt="Logo">
+        </div>
         <nav>
             <a href="#home">Home</a>
             <a href="#about">About</a>
+            <a href="#blog">Blog</a>
             <a href="#contact">Contact</a>
+            <a href="#signin">Sign In</a>
+            <a href="#subscribe">Subscribe</a>
+            <a href="#search">🔍</a>
         </nav>
     </header>
     <main>
-        <p>This is a brief introduction to my health blog. I'm excited to share reliable health information, practical tips, and motivational content with you!</p>
-        <img src="brand-logo.png" alt="Healthy lifestyle image">
+        <section id="intro">
+            <p>This is a brief introduction to my health blog. I'm excited to share reliable health information, practical tips, and motivational content with you!</p>
+            <img src="path-to-your-image.jpg" alt="Healthy lifestyle image">
+        </section>
+        <section id="latest-posts">
+            <h2>Latest Blog Posts</h2>
+            <article>
+                <h3>Post Title 1</h3>
+                <p>A short description of the first blog post. It provides an overview and entices the reader to click through to read the full post.</p>
+                <a href="#">Read more...</a>
+            </article>
+            <article>
+                <h3>Post Title 2</h3>
+                <p>A short description of the second blog post. It provides an overview and entices the reader to click through to read the full post.</p>
+                <a href="#">Read more...</a>
+            </article>
+            <article>
+                <h3>Post Title 3</h3>
+                <p>A short description of the third blog post. It provides an overview and entices the reader to click through to read the full post.</p>
+                <a href="#">Read more...</a>
+            </article>
+            <button class="see-more">See More</button>
+        </section>
+        <section id="about-me">
+            <h2>About Me</h2>
+            <p>Here, you can write a brief bio about yourself. Share your background, interests, and why you started this health blog.</p>
+        </section>
     </main>
     <footer>
-        <p>Contact me at: myemail@example.com</p>
+        <nav>
+            <a href="#home">Home</a>
+            <a href="#about">About</a>
+            <a href="#blog">Blog</a>
+            <a href="#contact">Contact</a>
+            <a href="#signin">Sign In</a>
+            <a href="#subscribe">Subscribe</a>
+            <a href="#search">🔍</a>
+        </nav>
+        <div class="contact-info">
+            <p>Contact me at: myemail@example.com</p>
+            <p>Phone: (123) 456-7890</p>
+            <div class="social-media">
+                <a href="https://facebook.com">Facebook</a>
+                <a href="https://twitter.com">Twitter</a>
+                <a href="https://instagram.com">Instagram</a>
+            </div>
+        </div>
+        <p>&copy; 2024 My Health Blog</p>
     </footer>
 </body>
 </html>
