--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="path-to-your-logo.png" alt="Logo">
+            <img src="brand-logo.png" alt="Logo">
         </div>
         <nav>
             <a href="#home">Home</a>
@@ -16,7 +16,6 @@
             <a href="#contact">Contact</a>
             <a href="#signin">Sign In</a>
             <a href="#subscribe">Subscribe</a>
-            <a href="#search">🔍</a>
         </nav>
     </header>
     <main>
@@ -56,7 +55,6 @@
             <a href="#contact">Contact</a>
             <a href="#signin">Sign In</a>
             <a href="#subscribe">Subscribe</a>
-            <a href="#search">🔍</a>
         </nav>
         <div class="contact-info">
             <p>Contact me at: myemail@example.com</p>
