--- a/index.html
+++ b/index.html
@@ -8,19 +8,20 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styles.css" />
-    <title>Web Design Mastery | Explore Destinations</title>
+    <title>Health Blog</title>
   </head>
   <body>
     <div class="container">
       <nav>
         <div class="nav__logo">
-          <img src="assets/logo.png" alt="logo" />
+          <img src="assets/brand-logo.png" alt="logo" />
         </div>
         <ul class="nav__links">
           <li class="link"><a href="#">Home</a></li>
-          <li class="link"><a href="#">Destinations</a></li>
-          <li class="link"><a href="#">Contact Us</a></li>
-          <li class="link"><a href="#">Blog</a></li>
+          <li class="link"><a href="#">About Us</a></li>
+          <li class="link"><a href="#">Mental Health</a></li>
+          <li class="link"><a href="#">Nutrition</a></li>
+          <li class="link"><a href="#">Fitness</a></li>
         </ul>
         <div class="search">
           <input type="text" placeholder="Search" />
@@ -31,9 +32,6 @@
           Log In
         </div>
       </nav>
-      <div class="destination__container">
-        <img class="bg__img__1" src="assets/bg-dots.png" alt="bg" />
-        <img class="bg__img__2" src="assets/bg-arrow.png" alt="bg" />
         <div class="socials">
           <span><i class="ri-twitter-fill"></i></span>
           <span><i class="ri-facebook-fill"></i></span>
@@ -41,46 +39,37 @@
           <span><i class="ri-youtube-fill"></i></span>
         </div>
         <div class="content">
-          <h1>EXPLORE<br />DREAM<br /><span>DESTINATION</span></h1>
-          <p>
-            It encourages exploration of unfamiliar territories, embracing
-            diverse cultures and landscapes, while pursuing the desired
-            destination that captivates the heart and ignites a sense of wonder.
-          </p>
-          <button class="btn">BOOK NOW</button>
+          <h1>WELCOME<br />TO MY<br /><span>HEALTH BLOG</span></h1>
+          <p>Your go-to source for reliable health information, practical tips, and motivational content!</p>
+          <button class="btn">SUBSCRIBE NOW</button>
         </div>
-        <div class="destination__grid">
-          <div class="destination__card">
-            <img src="assets/destination-1.jpg" alt="destination" />
+        <div class="articles__grid">
+          <div class="article__card">
+            <img src="assets/article1.jpg" alt="article" />
             <div class="card__content">
-              <h4>10 Must-Visit Hidden Gems</h4>
+              <h4>Why everyone keeps telling you to talk about your feelings</h4>
               <p>
-                Discover off-the-beaten-path locations and hidden gems within
-                dream destinations, taking you beyond the typical tourist spots.
+                THERE'S ANYTHING as prevalent as the idea that men should be strong and silent, it’s the world telling guys they need to talk about their feelings more. These contradictory messages are being cranked out at max volume, so it’s not surprising that we feel conflicted and frustrated.
               </p>
               <button class="btn">Read More</button>
             </div>
           </div>
-          <div class="destination__card">
-            <img src="assets/destination-2.jpg" alt="destination" />
+          <div class="article__card">
+            <img src="assets/article2.jpg" alt="article" />
             <div class="card__content">
-              <h4>Immersive Cultural Experiences</h4>
+              <h4>What happens to your body when you're sedentary</h4>
               <p>
-                Dive deep into the vibrant cultures of dream destinations,
-                showcasing the rituals, traditions, and local customs that make
-                these places truly unique.
+                One of the most damaging things you can do to your body is doing nothing at all. Being sedentary can do a number on your body—and it can be more dangerous to your lifespan and your risk of major diseases than you might think.
               </p>
               <button class="btn">Read More</button>
             </div>
           </div>
-          <div class="destination__card">
-            <img src="assets/destination-3.jpg" alt="destination" />
+          <div class="article__card">
+            <img src="assets/article3.jpg" alt="article" />
             <div class="card__content">
-              <h4>From Dreams to Reality</h4>
+              <h4>Lawmakers are seeking limits for Instagram and TikTok out of concern they harm kids’ mental health.</h4>
               <p>
-                Explore expert tips, and hidden gems, ensuring every moment of
-                your trip is optimized, and make the most of time in your
-                long-awaited dream location.
+                Social media’s effects on the mental health of young people are not well understood. That hasn’t stopped Congress, many legislatures, and the U.S. surgeon general from moving ahead with age bans and warning labels for YouTube, TikTok, and Instagram.
               </p>
               <button class="btn">Read More</button>
             </div>
