--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
           Log In
         </div>
       </nav>
+      <div class="articles__container">
+        <img class="bg__img__1" src="assets/bg-dots.png" alt="bg" />
+        <img class="bg__img__2" src="assets/bg-arrow.png" alt="bg" />
         <div class="socials">
           <span><i class="ri-twitter-fill"></i></span>
           <span><i class="ri-facebook-fill"></i></span>
