--- a/index.html
+++ b/index.html
@@ -79,5 +79,25 @@
         </div>
       </div>
     </div>
+    <footer>
+      <div class="footer__content">
+        <div class="footer__logo">
+          <img src="assets/brand-logo.png" alt="footer logo" />
+        </div>
+        <ul class="footer__links">
+          <li class="link"><a href="#">About Us</a></li>
+          <li class="link"><a href="#">Mental Health</a></li>
+          <li class="link"><a href="#">Nutrition</a></li>
+          <li class="link"><a href="#">Fitness</a></li>
+        </ul>
+        <div class="footer__socials">
+          <span><i class="ri-twitter-fill"></i></span>
+          <span><i class="ri-facebook-fill"></i></span>
+          <span><i class="ri-instagram-line"></i></span>
+          <span><i class="ri-youtube-fill"></i></span>
+        </div>
+        <p class="footer__copy">© 2024 Health Blog. All rights reserved.</p>
+      </div>
+    </footer>
   </body>
 </html>
