--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     <footer>
       <div class="footer__content">
         <div class="footer__logo">
-          <img src="assets/brand-logo.png" alt="footer logo" />
+          <img src="assets/logo2.png" alt="footer logo" />
         </div>
         <ul class="footer__links">
           <li class="link"><a href="#">About Us</a></li>
